--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
 
   provider: ^6.0.1
   shared_preferences: ^2.0.8
-  sliding_up_panel: ^2.0.0+1
   remixicon: ^1.0.0
+  pinput: ^1.2.0
 
 dev_dependencies:
   flutter_test:
