--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   provider: ^6.0.1
   shared_preferences: ^2.0.8
   remixicon: ^1.0.0
-  pinput: ^1.2.0
+  pinput: ^1.2.1
+  dio: ^4.0.0
+  dio_http_cache: ^0.3.0
+  flutter_inner_drawer: ^0.5.8
 
 dev_dependencies:
   flutter_test:
