--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   dio: ^4.0.0
   dio_http_cache: ^0.3.0
   flutter_inner_drawer: ^0.5.8
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
