--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   cached_network_image: ^3.1.0
   sqflite: ^2.0.0+4
   image_picker: ^0.8.4+2
-
+  firebase_core: ^1.7.0
+  firebase_auth: ^3.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test:
   flutter_lints: ^1.0.0
 flutter:
 
