--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   provider: ^6.0.1
   intl: ^0.17.0
-  shared_preferences: ^2.0.8
+  shared_preferences:
   remixicon: ^1.0.0
   pinput: ^1.2.1
   dio: ^4.0.0
@@ -22,7 +22,7 @@ dependencies:
   flutter_inner_drawer: ^0.5.8
   cached_network_image: ^3.1.0
   sqflite: ^2.0.0+4
-  image_picker: ^0.8.4+2
+  image_picker:
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
 
